# CRG

./: README.md
CMakeExample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.cpp
ClustalOexample/: CMakeLists.txt
ClustalOexample/include/clustal-omega/: Makefile  README  config.status  libtool
ClustalOexample/include/clustal-omega/src/hhalign/: Makefile
ClustalOexample/include/clustal-omega/src/kmpp/: KMeans.h  KmUtils.h
ClustalOexample/include/clustal-omega/src/squid/: Makefile
ClustalOexample/src/: Makefile  clustalo  clustalo.cpp
ClustalOexample/src/clustal/: Makefile
ClustalOexample/src/kmpp/: KMeans.cpp  KmTree.h  KmUtils.cpp  Makefile
ClusteringTree/: Weekly_report01.txt  handTree.cpp  treeBig_0308.cpp  treeBis.cpp  tree_v1.cpp
DummyData/: dummyTest.fasta  dummyTest2.fasta  dummyTree.txt  result.fasta
FirstWeekTrees/: bPlus  bPlusTree.cpp  binaryTreev2.cpp  broken  handTree  handTree.cpp  nAryTree.cpp  nary  randomPrinting.cpp  tree  tree.cpp  treeBig_0308.cpp  treeBis  treeBis.cpp  treeBisBalanced.cpp  treePlus  treeSmall_0308.cpp  trie
LR_algorithm/: CMakeLists.txt
LR_algorithm/src/: lr_algorithm.cpp
Report/: Weekly_report.txt.txt
benchDPA/: Readme.md  benchCOconfig.nf
mega-coffee/: CMakeLists.txt  Dockerfile
mega-coffee/Homfam/: P04637.fasta  hiv.fasta  lac.fasta  t4.fasta  test  test2.fa  test3.fa
mega-coffee/Homfam/clustalo_Uniq/: DEATH_clustalo.fa  DMRL_synthase_clustalo.fa  GEL_clustalo.fa  HLH_clustalo.fa  HMG_box_clustalo.fa  KAS_clustalo.fa  LIM_clustalo.fa  Sulfotransfer_clustalo.fa  TNF_clustalo.fa  aadh_clustalo.fa  az_clustalo.fa  biotin_lipoyl_clustalo.fa  cyt3_clustalo.fa  cytb_clustalo.fa  flav_clustalo.fa  ghf10_clustalo.fa  ghf22_clustalo.fa  ghf5_clustalo.fa  glob_clustalo.fa  gpdh_clustalo.fa  hip_clustalo.fa  hla_clustalo.fa  hormone_rec_clustalo.fa  hpr_clustalo.fa  hr_clustalo.fa  icd_clustalo.fa  il8_clustalo.fa  ins_clustalo.fa  kringle_clustalo.fa  kunitz_clustalo.fa  ldh_clustalo.fa  mmp_clustalo.fa  mofe_clustalo.fa  msb_clustalo.fa  myb_DNA-binding_clustalo.fa  oxidored_q6_clustalo.fa  phc_clustalo.fa  phoslip_clustalo.fa  ricin_clustalo.fa  rnasemam_clustalo.fa  (+5 more)
mega-coffee/Homfam/ref_alns/: .SyncID  .fa  Acetyltransf.fa  Ald_Xan_dh_2.fa  DEATH.fa  DMRL_synthase.fa  GEL.fa  HLH.fa  HMG_box.fa  KAS.fa  LIM.fa  OTCace.fa  PDZ.fa  Rhodanese.fa  Stap_Strp_toxin.fa  Sulfotransfer.fa  TNF.fa  aadh.fa  aat.fa  ace.fa  adh.fa  aldosered.fa  annexin.fa  asp.fa  az.fa  biotin_lipoyl.fa  blm.fa  blmb.fa  cah.fa  cryst.fa  cyclo.fa  cys.fa  cytb.fa  egf.fa  flav.fa  ghf1.fa  ghf10.fa  ghf11.fa  ghf13.fa  ghf22.fa  (+49 more)
mega-coffee/clustal/: Makefile  bowwhatever  config.status  libtool
mega-coffee/clustal/argtable2-13/: Makefile  config.status  libtool
mega-coffee/clustal/autom4te.cache/: output.0  traces.0
mega-coffee/clustal/src/: Makefile  mymain.c
mega-coffee/data/: Frequency of occurrence.txt  Occurrences_with_Direction.txt  symmetric probabilities_of_aa_substitutions  symmetric probabilities_of_aa_substitutions_with_universal
mega-coffee/tests/: CMakeLists.txt
mega-coffee/tests/HMM/: HMMTest.hpp  fwbw_test.cpp
mega-coffee/tests/Sequence/: AlignmentTest.hpp  sequence_test.cpp
mega-coffee/tests/clustering/: TreeTest.hpp  clustering_test.cpp
mega-coffee/testsuit/: clust_test.cpp
randomBucket/: CMakeLists.txt
randomBucket/src/: randomBucket.cpp
randomNewick/: exampleTree.nwk  randomNewick.py  randomNewickFile.py  seatoxin-out.nwk  seatoxin.nwk
